# claude-code-statusline

./: .editorconfig  .envrc  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cliff.toml  dev-install.sh  install.cmd  install.ps1  install.sh  patch-statusline.sh  rustqual.toml  statusline.sh  statusline.toml.example
.ctx/: rustqual-baseline.json
.github/workflows/: auto-release.yml  cut-release.yml  cut-unstable.yml  pr-validation.yml  publish-release.yml  publish-unstable.yml  release.yml
messages/: README.md
scripts/: virustotal-scan.sh
src/: components.rs  config.rs  configure.rs  debug_log.rs  git.rs  input.rs  main.rs  render.rs
tests/: golden.rs  integration.rs  integration.sh  shellcheck.sh  unit.sh
tests/common/: mod.rs
tests/fixtures/: claude-input-real.json  ctx-critical.json  ctx-normal.json  ctx-warning.json  test-input.json  with-cost.json
