[package]
name = "statusline"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "statusline"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
